--- a/Alpha/AlphaMvc/Views/BDC/EditBDC.cshtml
+++ b/Alpha/AlphaMvc/Views/BDC/EditBDC.cshtml
@@ -10,7 +10,7 @@
 <table>
     <tr>
         <td>
-            @Html.ActionLink("Break Down Cost List", "IndexBDC")
+            @Html.ActionLink("Estimate Price", "IndexBDC")
         </td>
     </tr>
 </table>
