--- a/Alpha/AlphaMvc/Views/BDC/IndexBDC.cshtml
+++ b/Alpha/AlphaMvc/Views/BDC/IndexBDC.cshtml
@@ -11,7 +11,7 @@
 <table class="barattach-2">
     <tr>
         <td>
-            <label class="topicmargin-size60-2">BreakDownCost</label>
+            <label class="topicmargin-size60-2">Estimate Price</label>
             <a href="/BDC/CreateBDC"><img src="@Url.Content("~/images/btnAdd.png")" alt="IMAGES" id="BDCCreate"/></a>
             <input id="chkShowAll" type="checkbox" class="chkShowAllinput" onchange="GetChecked(this)">
             <label for="chkShowAll" class="chkShowAll">Show All</label>
