--- a/Alpha/AlphaMvc/Views/Shared/_Layout.cshtml
+++ b/Alpha/AlphaMvc/Views/Shared/_Layout.cshtml
@@ -107,7 +107,7 @@
                                     </div>
                                 </div>
                             </li>
-                            <li id="mnBDC" class="menuli"><div class="menua"><div class="menutext">@Html.ActionLink("BreakDown Cost", "IndexBDC", "BDC")</div></div></li>
+                            <li id="mnBDC" class="menuli"><div class="menua"><div class="menutext">@Html.ActionLink("Estimate Price", "IndexBDC", "BDC")</div></div></li>
                             <li id="imgPayment" class="menuli">
                                 <div class="menua">
                                     <div class="menutext">
