--- a/Alpha/AlphaMvc/Views/BDC/CreateBDC.cshtml
+++ b/Alpha/AlphaMvc/Views/BDC/CreateBDC.cshtml
@@ -49,7 +49,7 @@
 <table>
     <tr>
         <td>
-            @Html.ActionLink("Break Down Cost List", "IndexBDC")
+            @Html.ActionLink("Estimate Price", "IndexBDC")
         </td>
     </tr>
 </table>
